--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="main">
-            <img src="img/main.png" alt="men" class="men">
+            <img src="./833961c0-7706-4027-a943-1c3268e55ace.jpeg" alt="men" class="men">
             <div class="main-detil">
                 <p>Hello i'm</p>
                 <h1>Govardhan</h1>
