--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#experience">Experience</a></li>
                     <li><a href="#contacts">Contact</a></li>
+                    <li>
+                        <div class="viewcount" >
+                            <h4>viewcount</h4>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
