--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
                     <li><a href="#experience">Experience</a></li>
                     <li><a href="#contacts">Contact</a></li>
                     <li>
-                        <div class="viewcount" >
-                            <h4>viewcount</h4>
+                        <a>View Count</a>
+                        <div id = view-count>
+                                <a target="_blank">
+                                    <img src="https://hitwebcounter.com/counter/counter.php?page=11163524&style=0006&nbdigits=5&type=page&initCount=0" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a>                                    
+                                    
                         </div>
                     </li>
                 </ul>
